Add styled footer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Luben Stoyanov | Web Developer</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Mulish&family=Philosopher&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
@@ -33,14 +42,16 @@
                     </li>
                     <li>
                         <a
-                            href="https://www.linkedin.com/in/luben-stoyanov/"
+                            href="https://www.linkedin.com/in/luben-stoyanov"
                             target="_blank"
                             aria-hidden="true"
                             ><span class="fa-brands fa-linkedin"></span
                             ><span class="sr-only">LinkedIn</span></a
                         >
                     </li>
-                    <!--       <li><a href="#" target="_blank">Resume</a></li> -->
+                    <li>
+                        <a class="button" href="#" target="_blank">Resume</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -67,5 +78,39 @@
 
             <p><a href="mailto:luben.stoyanov.ls@gmail.com">Email me</a></p>
         </section>
+        <footer>
+            <h2>Luben Stoyanov &middot; Web Developer</h2>
+            <ul>
+                <li>
+                    <a
+                        href="https://github.com/LubenStoyanov"
+                        target="_blank"
+                        aria-hidden="true"
+                        ><span class="fa-brands fa-square-github"></span
+                        ><span class="sr-only">Github</span></a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.linkedin.com/in/luben-stoyanov"
+                        target="_blank"
+                        aria-hidden="true"
+                        ><span class="fa-brands fa-linkedin"></span
+                        ><span class="sr-only">LinkedIn</span></a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="mailto:luben.stoyanov.ls@gmail.com"
+                        aria-hidden="true"
+                        ><span class="fa-solid fa-envelope"></span
+                        ><span class="sr-only">Email</span></a
+                    >
+                </li>
+            </ul>
+            <p>
+                <small>&copy; 2021 Luben Stoyanov. All rights reserved.</small>
+            </p>
+        </footer>
     </body>
 </html>
