Reverse projects display order

--- a/about.html
+++ b/about.html
@@ -28,9 +28,13 @@
                             >
                         </h1>
                     </li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li>
+                        <a href="index.html#projects">Projects</a>
+                    </li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li>
+                        <a href="index.html#contact">Contact</a>
+                    </li>
                     <li>
                         <a
                             href="https://github.com/LubenStoyanov"
@@ -55,25 +59,12 @@
                 </ul>
             </nav>
         </header>
-        <section id="intro">
-            <p>Hi, my name is <span class="name">Luben Stoyanov.</span></p>
-            <h2>I create the web.</h2>
-            <p>
-                I'm a web developer specializing in JavaScript and UI/UX with a
-                good grasp of backend technologies.
-            </p>
-            <p>
-                Currently, I'm making a career switch from home care giving to
-                <a href="https://github.com/LubenStoyanov">web development</a>.
-            </p>
-        </section>
         <div class="bg-blue gradient-border-top">
             <section id="projects">
-                <h2>Favorite Projects</h2>
+                <h2>About Luben Stoyanov</h2>
                 <article>
                     <div class="text">
-                        <h4>Latest Project</h4>
-                        <h3>Word Masters</h3>
+                        <h3>Interests</h3>
                         <p class="black-box">
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Repellat, praesentium? Laboriosam, beatae
@@ -81,62 +72,24 @@
                             nostrum voluptatum quod et eius amet adipisci,
                             veniam excepturi. Nam, nostrum.
                         </p>
-                        <h4>Technologies used include:</h4>
+                        <h4>Technologies I use mostly</h4>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
-                            <li>AJAX</li>
-                            <li>Web API</li>
+                            <li>React.js</li>
+                            <li>Node.js</li>
+                            <li>PostgreSQL</li>
                         </ul>
                     </div>
                     <img
-                        src="/img/word-masters.png"
-                        alt="Screenshot of my first portfolio website."
-                    />
-                </article>
-                <article>
-                    <div class="text">
-                        <h4>Personal Project</h4>
-                        <h3>Previous Portfolio Website</h3>
-                        <p class="black-box">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Sed iure, praesentium quae illum neque
-                            temporibus deserunt possimus accusamus officia
-                            tempora quod sequi ipsam. Eveniet maxime itaque,
-                            iste odit blanditiis quasi.
-                        </p>
-                        <h4>Technologies used include:</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>TailwindCSS</li>
-                            <li>Next.js</li>
-                            <li>i18next</li>
-                        </ul>
-                    </div>
-                    <img
-                        src="/img/portfolio-v1.1.png"
+                        class="about-pic"
+                        src="/img/face-rm-bg-tr.png"
                         alt="Screenshot of my first portfolio website."
                     />
                 </article>
             </section>
         </div>
-        <section id="contact" class="gradient-border-top">
-            <h2>Contact me</h2>
-
-            <p>
-                I'm always interested in hearing about oppertunities to create
-                outstanding websites and webapps, improving existing ones and
-                the latest hot stuff.
-            </p>
-
-            <p>
-                <a class="button" href="mailto:luben.stoyanov.ls@gmail.com"
-                    >Email me</a
-                >
-                <!-- TODO: Create contact form instead of email button -->
-            </p>
-        </section>
         <footer class="gradient-border-top">
             <h2>Luben Stoyanov &middot; Web Developer</h2>
             <ul>
