Basic about page

--- a/about.html
+++ b/about.html
@@ -60,18 +60,24 @@
             </nav>
         </header>
         <div class="bg-blue gradient-border-top">
-            <section id="projects">
+            <section id="about">
                 <h2>About Luben Stoyanov</h2>
                 <article>
                     <div class="text">
-                        <h3>Interests</h3>
-                        <p class="black-box">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Repellat, praesentium? Laboriosam, beatae
-                            error, cumque molestiae fugit exercitationem hic ad
-                            nostrum voluptatum quod et eius amet adipisci,
-                            veniam excepturi. Nam, nostrum.
-                        </p>
+                        <h3>Just the highlights</h3>
+                        <div class="black-box">
+                            <p>
+                            Hello, I'm Luben Stoyanov. I live in Passau, Germany.
+                            Currently I'm looking for a entry level job as a web developer.
+                            <br> I want to build performant and beautiful web products that are
+                            intuitive to use.
+                            </p>
+                            <ul>
+                                <li>I enjoy learning every day something new.</li>
+                                <li>My intent is always to understand the subject at hand.</li>
+                                <li>Keeping harmony is of utmost importance to me.</li>
+                            </ul>
+                        </div>
                         <h4>Technologies I use mostly</h4>
                         <ul>
                             <li>HTML</li>
@@ -80,6 +86,7 @@
                             <li>React.js</li>
                             <li>Node.js</li>
                             <li>PostgreSQL</li>
+                            <li>MongoDB</li>
                         </ul>
                     </div>
                     <img
