--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         >
                     </li>
                     <li>
-                        <a class="button" href="#" target="_blank">Resume</a>
+                        <a class="button" href="#">Resume</a>
                     </li>
                 </ul>
             </nav>
