Change contact bg-color, add text to projects, link to projects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
             <p>
                 Currently, I'm making a career switch from home care giving to
-                <a href="https://github.com/LubenStoyanov">web development</a>.
+                <a href="https://github.com/LubenStoyanov" target="_blank">web development</a>.
             </p>
         </section>
         <div class="bg-blue gradient-border-top">
@@ -75,11 +75,7 @@
                         <h4>Latest Project</h4>
                         <h3>Word Masters</h3>
                         <p class="black-box">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Repellat, praesentium? Laboriosam, beatae
-                            error, cumque molestiae fugit exercitationem hic ad
-                            nostrum voluptatum quod et eius amet adipisci,
-                            veniam excepturi. Nam, nostrum.
+                            Word Master is a popular word puzzle game that challenges players to guess a hidden five-letter word within six attempts. It's a fun and engaging game that tests your word knowledge, deductive reasoning, and vocabulary skills. You can play it <a href="https://guess-the-word-phi.vercel.app/" target="_blank">here</a>.
                         </p>
                         <h4>Technologies used include:</h4>
                         <ul>
@@ -100,11 +96,13 @@
                         <h4>Personal Project</h4>
                         <h3>Previous Portfolio Website</h3>
                         <p class="black-box">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Sed iure, praesentium quae illum neque
-                            temporibus deserunt possimus accusamus officia
-                            tempora quod sequi ipsam. Eveniet maxime itaque,
-                            iste odit blanditiis quasi.
+                            This is my first version of my portfolio website. It has 
+                            a typewriter implemented. A few animations are also 
+                            included. I see it mostly as an experiment and an 
+                            exercise. It was lacking colors that's why I created
+                            a new version. Take a look at the old one 
+                            <a href="https://portfolio-next-git-main-lubenstoyanov.vercel.app/" 
+                               target="_blank">here</a>.
                         </p>
                         <h4>Technologies used include:</h4>
                         <ul>
@@ -168,8 +166,9 @@
                 </li>
             </ul>
             <p>
-                <small>&copy; 2021 Luben Stoyanov. All rights reserved.</small>
+                <small class="copyrigth">&copy; </small>
             </p>
         </footer>
+        <script src="src/main.js"></script>
     </body>
 </html>
