Change contact color, font-size and spacing

--- a/about.html
+++ b/about.html
@@ -68,7 +68,9 @@
                         <div class="black-box">
                             <p>
                             Hello, I'm Luben Stoyanov. I live in Passau, Germany.
-                            Currently I'm looking for a entry level job as a web developer.
+                            Currently I'm looking for a job as a web developer where 
+                            I can apply my skills, learn new ones and grow as a 
+                            developer and a human being.
                             <br> I want to build performant and beautiful web products that are
                             intuitive to use.
                             </p>
