--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
         <header>
@@ -22,18 +22,18 @@
                 <ul>
                     <li>
                         <h1>
-                            <a href="index.html"
+                            <a href="/"
                                 ><span class="fa-solid fa-terminal"></span
                                 ><span>Luben Stoyanov</span></a
                             >
                         </h1>
                     </li>
                     <li>
-                        <a href="index.html#projects">Projects</a>
+                        <a href="/#projects">Projects</a>
                     </li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="/about">About</a></li>
                     <li>
-                        <a href="index.html#contact">Contact</a>
+                        <a href="/#contact">Contact</a>
                     </li>
                     <li>
                         <a
@@ -130,8 +130,9 @@
                 </li>
             </ul>
             <p>
-                <small>&copy; 2021 Luben Stoyanov. All rights reserved.</small>
+                <small class="copyrigth">&copy; </small>
             </p>
         </footer>
+        <script src="../src/main.js"></script>
     </body>
 </html>
