--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <ul>
                     <li>
                         <h1>
-                            <a href="index.html"
+                            <a href="/"
                                 ><span class="fa-solid fa-terminal"></span
                                 ><span>Luben Stoyanov</span></a
                             >
                         </h1>
                     </li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li>
                         <a
