Add space to navbar and contact

--- a/about/index.html
+++ b/about/index.html
@@ -92,9 +92,9 @@
                         </ul>
                     </div>
                     <img
-                        class="about-pic"
+                        loading="lazy"
                         src="/img/face-rm-bg-tr.png"
-                        alt="Screenshot of my first portfolio website."
+                        alt="A smilying developer"
                     />
                 </article>
             </section>
