--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                         </ul>
                     </div>
                     <img
+                        loading="lazy"
                         src="/img/word-masters.png"
                         alt="Screenshot of my first portfolio website."
                     />
@@ -113,6 +114,7 @@
                         </ul>
                     </div>
                     <img
+                        loading="lazy"
                         src="/img/portfolio-v1.1.png"
                         alt="Screenshot of my first portfolio website."
                     />
