--- a/index.html
+++ b/index.html
@@ -130,12 +130,8 @@
                 the latest hot stuff.
             </p>
 
-            <p>
-                <a class="button" href="mailto:luben.stoyanov.ls@gmail.com"
-                    >Email me</a
-                >
-                <!-- TODO: Create contact form instead of email button -->
-            </p>
+            <a class="button" href="mailto:luben.stoyanov.ls@gmail.com">Email me</a>
+            <!-- TODO: Create contact form instead of email link -->
         </section>
         <footer class="gradient-border-top">
             <h2>Luben Stoyanov &middot; Web Developer</h2>
