--- a/about/index.html
+++ b/about/index.html
@@ -91,11 +91,10 @@
                             <li>MongoDB</li>
                         </ul>
                     </div>
-                    <img
-                        loading="lazy"
-                        src="/img/face-rm-bg-tr.png"
-                        alt="A smilying developer"
-                    />
+                    <img class="about-pic" 
+                         loading="lazy"
+                         src="/img/face-rm-bg-tr.png"
+                         alt="A smilying developer"/>
                 </article>
             </section>
         </div>
