add links to projects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             </p>
             <p>
                 Currently, I'm making a career switch from home care giving to
-                <a href="https://github.com/LubenStoyanov" target="_blank">web development</a>.
+                <a href="https://github.com/LubenStoyanov" target="_blank"
+                    >web development</a
+                >.
             </p>
         </section>
         <div class="bg-blue gradient-border-top">
@@ -75,7 +77,11 @@
                         <h4>Latest Project</h4>
                         <h3>Word Masters</h3>
                         <p class="black-box">
-                            Word Master is a popular word puzzle game that challenges players to guess a hidden five-letter word within six attempts. It's a fun and engaging game that tests your word knowledge, deductive reasoning, and vocabulary skills. You can play it <a href="https://guess-the-word-phi.vercel.app/" target="_blank">here</a>.
+                            Word Master is a popular word puzzle game that
+                            challenges players to guess a hidden five-letter
+                            word within six attempts. It's a fun and engaging
+                            game that tests your word knowledge, deductive
+                            reasoning, and vocabulary skills.
                         </p>
                         <h4>Technologies used include:</h4>
                         <ul>
@@ -84,6 +90,28 @@
                             <li>JavaScript</li>
                             <li>AJAX</li>
                             <li>Web API</li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://github.com/LubenStoyanov/guess-the-word"
+                                    target="_blank"
+                                    aria-hidden="true"
+                                    ><span class="fa-brands fa-square-github"></span
+                                    ><span class="sr-only">Github</span></a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://guess-the-word-phi.vercel.app/"
+                                    target="_blank"
+                                    ><span
+                                    class="fa-solid fa-square-arrow-up-right"
+                                    ></span
+                                ><span class="sr-only">Word Masters</span></a
+                                ></a>
+                            </li>
+                           
                         </ul>
                     </div>
                     <img
@@ -97,13 +125,11 @@
                         <h4>Personal Project</h4>
                         <h3>Previous Portfolio Website</h3>
                         <p class="black-box">
-                            This is my first version of my portfolio website. It has 
-                            a typewriter implemented. A few animations are also 
-                            included. I see it mostly as an experiment and an 
-                            exercise. It was lacking colors that's why I created
-                            a new version. Take a look at the old one 
-                            <a href="https://portfolio-next-git-main-lubenstoyanov.vercel.app/" 
-                               target="_blank">here</a>.
+                            This is my first version of my portfolio website. It
+                            has a typewriter implemented. A few animations are
+                            also included. I see it mostly as an experiment and
+                            an exercise. It was lacking colors, thus I
+                            created a new version.
                         </p>
                         <h4>Technologies used include:</h4>
                         <ul>
@@ -111,6 +137,28 @@
                             <li>TailwindCSS</li>
                             <li>Next.js</li>
                             <li>i18next</li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://github.com/LubenStoyanov/portfolio-next"
+                                    target="_blank"
+                                    aria-hidden="true"
+                                    ><span class="fa-brands fa-square-github"></span
+                                    ><span class="sr-only">Github</span></a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://lubenstoyanov.com"
+                                    target="_blank"
+                                    ><span
+                                    class="fa-solid fa-square-arrow-up-right"
+                                    ></span
+                                ><span class="sr-only">Word Masters</span></a
+                                ></a>
+                            </li>
+                           
                         </ul>
                     </div>
                     <img
@@ -130,7 +178,9 @@
                 the latest hot stuff.
             </p>
 
-            <a class="button" href="mailto:luben.stoyanov.ls@gmail.com">Email me</a>
+            <a class="button" href="mailto:luben.stoyanov.ls@gmail.com"
+                >Email me</a
+            >
             <!-- TODO: Create contact form instead of email link -->
         </section>
         <footer class="gradient-border-top">
