Add typewriter effect

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         </header>
         <section id="intro">
             <p>Hi, my name is <span class="name">Luben Stoyanov.</span></p>
-            <h2>I create the web.</h2>
+            <!--<h2 id="typewriter">I create the web.</h2>-->
+            <h2 id="typewriter"></h2>
             <p>
                 I'm a web developer specializing in JavaScript and UI/UX with a
                 good grasp of backend technologies.
@@ -217,6 +218,7 @@
                 <small class="copyrigth">&copy; </small>
             </p>
         </footer>
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
         <script src="src/main.js"></script>
     </body>
 </html>
