Update word master img

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                     <img
                         loading="lazy"
-                        src="/img/word-masters.png"
+                        src="/img/word-master.png"
                         alt="Screenshot of my first portfolio website."
                     />
                 </article>
