Add dog quiz project

--- a/index.html
+++ b/index.html
@@ -123,6 +123,54 @@
                 </article>
                 <article>
                     <div class="text">
+                        <h4> Project of Joy</h4>
+                        <h3>Dog Quiz</h3>
+                        <p class="black-box">
+                            Dog Quiz let's you guess the breed of the displayed dog. 
+                            It queries the dog.ceo API for random images. It's 
+                            ideal for taking a break of the daily noise and just 
+                            feel joy of looking at dogs. Sorry cat lovers. Maybe 
+                            there will be a cat version.
+                        </p>
+                        <h4>Technologies used include:</h4>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>AJAX</li>
+                            <li>Web API</li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://github.com/LubenStoyanov/dog-quiz"
+                                    target="_blank"
+                                    aria-hidden="true"
+                                    ><span class="fa-brands fa-square-github"></span
+                                    ><span class="sr-only">Github</span></a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://dog-quiz-nine.vercel.app/"
+                                    target="_blank"
+                                    ><span
+                                    class="fa-solid fa-square-arrow-up-right"
+                                    ></span
+                                ><span class="sr-only">Dog Quiz</span></a
+                                ></a>
+                            </li>
+                           
+                        </ul>
+                    </div>
+                    <img
+                        loading="lazy"
+                        src="/img/dog-quiz.png"
+                        alt="Screenshot of my first portfolio website."
+                    />
+                </article>
+                <article>
+                    <div class="text">
                         <h4>Personal Project</h4>
                         <h3>Previous Portfolio Website</h3>
                         <p class="black-box">
