--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <!--<li><a href="#contact">Contact</a></li>-->
                     <li>
                         <a
                             href="https://github.com/LubenStoyanov"
@@ -51,7 +51,7 @@
                         >
                     </li>
                     <li>
-                        <a class="button" href="#">Resume</a>
+                        <a class="button" href="mailto:luben.stoyanov.ls@gmail.com">Contact</a>
                     </li>
                 </ul>
             </nav>
