--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             </li>
                             <li>
                                 <a
-                                    href="https://lubenstoyanov.com"
+                                    href="https://portfolio-next-puce.vercel.app/"
                                     target="_blank"
                                     ><span
                                     class="fa-solid fa-square-arrow-up-right"
