Remove lazy loading img, update header about page

--- a/about/index.html
+++ b/about/index.html
@@ -28,13 +28,8 @@
                             >
                         </h1>
                     </li>
-                    <li>
-                        <a href="/#projects">Projects</a>
-                    </li>
+                    <li><a href="/#projects">Projects</a></li>
                     <li><a href="/about">About</a></li>
-                    <li>
-                        <a href="/#contact">Contact</a>
-                    </li>
                     <li>
                         <a
                             href="https://github.com/LubenStoyanov"
@@ -54,7 +49,7 @@
                         >
                     </li>
                     <li>
-                        <a class="button" href="#" target="_blank">Resume</a>
+                        <a class="button" href="mailto:luben.stoyanov.ls@gmail.com">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -64,7 +59,6 @@
                 <h2>About Luben Stoyanov</h2>
                 <article>
                     <img class="about-pic" 
-                         loading="lazy"
                          src="/img/face-rm-bg-tr.png"
                          alt="A smilying developer"/>
                     <div class="text">
